Closed
Bug 814979
Opened 12 years ago
Closed 12 years ago
Fennec build fails with Mer SDK: invalid inclusion of GLXLibrary.h
Categories
(Firefox for Android Graveyard :: General, defect)
Tracking
(Not tracked)
RESOLVED
FIXED
Future
People
(Reporter: shtetldik, Assigned: romaxa)
Details
Attachments
(2 files)
User Agent: Mozilla/5.0 (X11; Linux x86_64; rv:17.0) Gecko/17.0 Firefox/17.0
Build ID: 20121119183901
Steps to reproduce:
Built current trunk XUL Fennec with Mer SDK (see attached mozconfig). The problems appears to be in the invalid inclusion:
#if !defined(MOZ_PLATFORM_MAEMO)
#include "GLXLibrary.h"
#endif
in gfx/thebes/gfxXlibSurface.h
It's incorrect in case of EGL based Mer build, since there is no GLX at all in such case.
Actual results:
Built failed with a following error:
-------
c++ -o GLLibraryLoader.o -c -fvisibility=hidden -DMOZ_GLUE_IN_PROGRAM -DMOZILLA_INTERNAL_API -D_IMPL_NS_COM -DEXPORT_XPT_API -DEXPORT_XPTC_API -D_IMPL_NS_GFX -D_IMPL_NS_WIDGET -DIMPL_XREAPI -DIMPL_NS_NET -DIMPL_THEBES -DSTATIC_EXPORTABLE_JS_API -DNO_NSPR_10_SUPPORT -I/home/user/build/mozilla/mozilla-central/gfx/gl -I. -I../../dist/include -I/home/user/build/mozilla/mozilla-central/obj-build/dist/include/nspr -I/home/user/build/mozilla/mozilla-central/obj-build/dist/include/nss -fPIC -pedantic -Wall -Wpointer-arith -Woverloaded-virtual -Werror=return-type -Wtype-limits -Wempty-body -Wno-ctor-dtor-privacy -Wno-overlength-strings -Wno-invalid-offsetof -Wno-variadic-macros -Wno-long-long -O3 -fno-exceptions -fno-strict-aliasing -ffunction-sections -fdata-sections -fno-exceptions -std=gnu++0x -pthread -pipe -DNDEBUG -DTRIMMED -gdwarf-2 -Os -freorder-blocks -fomit-frame-pointer -I/home/user/build/mozilla/mozilla-central/obj-build/dist/include/cairo -DQT_SHARED -I/usr/include/qt4 -I/usr/include/qt4/QtGui -I/usr/include/qt4/QtCore -I/usr/include/qt4/QtNetwork -I/usr/include/qt4/QtOpenGL -I/usr/include/QtMobility -I/usr/include/QtSensors -I/usr/include/QtFeedback -I/usr/include/QtLocation -DMOZILLA_CLIENT -include ../../mozilla-config.h -MD -MF .deps/GLLibraryLoader.o.pp /home/user/build/mozilla/mozilla-central/gfx/gl/GLLibraryLoader.cpp
GLContextProviderEGL.cpp
c++ -o GLContextProviderEGL.o -c -fvisibility=hidden -DMOZ_GLUE_IN_PROGRAM -DMOZILLA_INTERNAL_API -D_IMPL_NS_COM -DEXPORT_XPT_API -DEXPORT_XPTC_API -D_IMPL_NS_GFX -D_IMPL_NS_WIDGET -DIMPL_XREAPI -DIMPL_NS_NET -DIMPL_THEBES -DSTATIC_EXPORTABLE_JS_API -DNO_NSPR_10_SUPPORT -I/home/user/build/mozilla/mozilla-central/gfx/gl -I. -I../../dist/include -I/home/user/build/mozilla/mozilla-central/obj-build/dist/include/nspr -I/home/user/build/mozilla/mozilla-central/obj-build/dist/include/nss -fPIC -pedantic -Wall -Wpointer-arith -Woverloaded-virtual -Werror=return-type -Wtype-limits -Wempty-body -Wno-ctor-dtor-privacy -Wno-overlength-strings -Wno-invalid-offsetof -Wno-variadic-macros -Wno-long-long -O3 -fno-exceptions -fno-strict-aliasing -ffunction-sections -fdata-sections -fno-exceptions -std=gnu++0x -pthread -pipe -DNDEBUG -DTRIMMED -gdwarf-2 -Os -freorder-blocks -fomit-frame-pointer -I/home/user/build/mozilla/mozilla-central/obj-build/dist/include/cairo -DQT_SHARED -I/usr/include/qt4 -I/usr/include/qt4/QtGui -I/usr/include/qt4/QtCore -I/usr/include/qt4/QtNetwork -I/usr/include/qt4/QtOpenGL -I/usr/include/QtMobility -I/usr/include/QtSensors -I/usr/include/QtFeedback -I/usr/include/QtLocation -DMOZILLA_CLIENT -include ../../mozilla-config.h -MD -MF .deps/GLContextProviderEGL.o.pp /home/user/build/mozilla/mozilla-central/gfx/gl/GLContextProviderEGL.cpp
GLLibraryEGL.cpp
In file included from /home/user/build/mozilla/mozilla-central/gfx/gl/GLContextProviderEGL.cpp:115:0:
/home/user/build/mozilla/mozilla-central/gfx/gl/GLContextProvider.h:63:0: warning: "GL_CONTEXT_PROVIDER_DEFAULT" redefined [enabled by default]
/home/user/build/mozilla/mozilla-central/gfx/gl/GLContextProvider.h:56:0: note: this is the location of the previous definition
In file included from ../../dist/include/gfxXlibSurface.h:15:0,
from /home/user/build/mozilla/mozilla-central/gfx/gl/GLContextProviderEGL.cpp:29:
../../dist/include/GLXLibrary.h:10:23: error: conflicting declaration 'typedef realGLboolean GLboolean'
//usr/include/GLES2/gl2.h:24:26: error: 'GLboolean' has a previous declaration as 'typedef unsigned char GLboolean'
In file included from ../../dist/include/nsAString.h:40:0,
from ../../dist/include/nsSubstring.h:11,
from ../../dist/include/nsString.h:13,
from ../../dist/include/nsStringGlue.h:15,
from ../../dist/include/nsThreadUtils.h:15,
from /home/user/build/mozilla/mozilla-central/gfx/gl/GLContext.cpp:14:
../../dist/include/nsTSubstring.h:410:12: note: the mangling of 'va_list' has changed in GCC 4.4
c++ -o GLLibraryEGL.o -c -fvisibility=hidden -DMOZ_GLUE_IN_PROGRAM -DMOZILLA_INTERNAL_API -D_IMPL_NS_COM -DEXPORT_XPT_API -DEXPORT_XPTC_API -D_IMPL_NS_GFX -D_IMPL_NS_WIDGET -DIMPL_XREAPI -DIMPL_NS_NET -DIMPL_THEBES -DSTATIC_EXPORTABLE_JS_API -DNO_NSPR_10_SUPPORT -I/home/user/build/mozilla/mozilla-central/gfx/gl -I. -I../../dist/include -I/home/user/build/mozilla/mozilla-central/obj-build/dist/include/nspr -I/home/user/build/mozilla/mozilla-central/obj-build/dist/include/nss -fPIC -pedantic -Wall -Wpointer-arith -Woverloaded-virtual -Werror=return-type -Wtype-limits -Wempty-body -Wno-ctor-dtor-privacy -Wno-overlength-strings -Wno-invalid-offsetof -Wno-variadic-macros -Wno-long-long -O3 -fno-exceptions -fno-strict-aliasing -ffunction-sections -fdata-sections -fno-exceptions -std=gnu++0x -pthread -pipe -DNDEBUG -DTRIMMED -gdwarf-2 -Os -freorder-blocks -fomit-frame-pointer -I/home/user/build/mozilla/mozilla-central/obj-build/dist/include/cairo -DQT_SHARED -I/usr/include/qt4 -I/usr/include/qt4/QtGui -I/usr/include/qt4/QtCore -I/usr/include/qt4/QtNetwork -I/usr/include/qt4/QtOpenGL -I/usr/include/QtMobility -I/usr/include/QtSensors -I/usr/include/QtFeedback -I/usr/include/QtLocation -DMOZILLA_CLIENT -include ../../mozilla-config.h -MD -MF .deps/GLLibraryEGL.o.pp /home/user/build/mozilla/mozilla-central/gfx/gl/GLLibraryEGL.cpp
make[6]: *** [GLContextProviderEGL.o] Error 1
make[6]: *** Waiting for unfinished jobs....
In file included from ../../dist/include/nsAString.h:40:0,
from ../../dist/include/nsSubstring.h:11,
from ../../dist/include/nsString.h:13,
from ../../dist/include/nsStringGlue.h:15,
from ../../dist/include/gfxPlatform.h:11,
from ../../dist/include/gfxQtPlatform.h:9,
from ../../dist/include/mozilla/X11Util.h:17,
from /home/user/build/mozilla/mozilla-central/gfx/gl/GLLibraryEGL.h:9,
from /home/user/build/mozilla/mozilla-central/gfx/gl/GLLibraryEGL.cpp:5:
../../dist/include/nsTSubstring.h:410:12: note: the mangling of 'va_list' has changed in GCC 4.4
make[6]: Leaving directory `/home/user/build/mozilla/mozilla-central/obj-build/gfx/gl'
make[5]: *** [libs] Error 2
make[5]: Leaving directory `/home/user/build/mozilla/mozilla-central/obj-build/gfx'
make[4]: *** [libs_tier_platform] Error 2
make[4]: Leaving directory `/home/user/build/mozilla/mozilla-central/obj-build'
make[3]: *** [tier_platform] Error 2
make[3]: Leaving directory `/home/user/build/mozilla/mozilla-central/obj-build'
make[2]: *** [default] Error 2
make[2]: Leaving directory `/home/user/build/mozilla/mozilla-central/obj-build'
make[1]: *** [realbuild] Error 2
make[1]: Leaving directory `/home/user/build/mozilla/mozilla-central'
make: *** [build] Error 2
Expected results:
Build should have succeeded.
| Assignee | ||
Comment 1•12 years ago
|
||
Remove maemo specific hacks, use GL provider name
Assignee: nobody → romaxa
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true
Attachment #685040 -
Flags: review?(mh+mozilla)
Attachment #685040 -
Flags: review?(matt.woodrow)
Updated•12 years ago
|
Attachment #685040 -
Flags: review?(mh+mozilla) → review+
Updated•12 years ago
|
Attachment #685040 -
Flags: review?(matt.woodrow) → review+
| Assignee | ||
Comment 2•12 years ago
|
||
safety belts
https://tbpl.mozilla.org/?tree=Try&rev=4605adef653c
| Assignee | ||
Comment 3•12 years ago
|
||
Comment 4•12 years ago
|
||
Status: ASSIGNED → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
Target Milestone: --- → Future
You need to log in
before you can comment on or make changes to this bug.
Description
•